Feature #13271
Migrate Silverpeas-Looks to Jakarta EE 10.