@@ -1,16 +1,16 @@
 package org.silverpeas.looks.aurora.service.weather;
 
+import jakarta.inject.Named;
+import jakarta.ws.rs.WebApplicationException;
+import jakarta.ws.rs.client.ClientBuilder;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
 import org.silverpeas.core.annotation.Service;
+import org.silverpeas.core.util.Charsets;
 import org.silverpeas.kernel.logging.SilverLogger;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import javax.inject.Named;
-import javax.ws.rs.WebApplicationException;
-import javax.ws.rs.client.ClientBuilder;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
@@ -23,10 +23,11 @@ import java.util.stream.Stream;
 
 /**
  * Requester of the Yahoo weather service.
+ *
  * @author mmoquillon
  */
-@Named("Yahoo")
 @Service
+@Named("Yahoo")
 public class YahooWeatherRequester implements WeatherServiceRequester {
 
   private static final String API_URL = "http://weather-ydn-yql.media.yahoo.com/forecastrss";
@@ -45,21 +46,23 @@ public class YahooWeatherRequester implements WeatherServiceRequester {
     final String oauthSignature =
         computeOAuthSignature(consumerKey, consumerSecret, oauthNonce, cityId, timestamp);
     final String oauth = "OAuth oauth_consumer_key=\"" + consumerKey +
-        "\",oauth_nonce=\"" + oauthNonce +
-        "\",oauth_timestamp=\"" + timestamp +
-        "\",oauth_signature_method=\"HMAC-SHA1\"" +
-        "\",oauth_signature=\"" + oauthSignature +
-        "\",oauth_version=\"1.0\"";
-    final String weatherData = ClientBuilder.newClient()
-        .target(API_URL)
-        .queryParam("woeid", cityId)
-        .queryParam("u", "c")
-        .queryParam("format", "json")
-        .request(MediaType.APPLICATION_JSON_TYPE)
-        .header("Yahoo-App-Id", appKey)
-        .header("Authorization", oauth)
-        .get(String.class);
-    return new WeatherForecastData(SERVICE_NAME, weatherData, MediaType.APPLICATION_JSON_TYPE);
+                         "\",oauth_nonce=\"" + oauthNonce +
+                         "\",oauth_timestamp=\"" + timestamp +
+                         "\",oauth_signature_method=\"HMAC-SHA1\"" +
+                         "\",oauth_signature=\"" + oauthSignature +
+                         "\",oauth_version=\"1.0\"";
+    try (var client = ClientBuilder.newClient()) {
+      final String weatherData =
+          client.target(API_URL)
+              .queryParam("woeid", cityId)
+              .queryParam("u", "c")
+              .queryParam("format", "json")
+              .request(MediaType.APPLICATION_JSON_TYPE)
+              .header("Yahoo-App-Id", appKey)
+              .header("Authorization", oauth)
+              .get(String.class);
+      return new WeatherForecastData(SERVICE_NAME, weatherData, MediaType.APPLICATION_JSON_TYPE);
+    }
   }
 
   private String computeOAuthNonce() {
@@ -73,28 +76,28 @@ public class YahooWeatherRequester implements WeatherServiceRequester {
     try {
       final String parameters =
           Stream.of("oauth_consumer_key=" + consumerKey,
-              "oauth_nonce=" + oauthNonce,
-              "oauth_signature_method=HMAC-SHA1",
-              "oauth_timestamp=" + timestamp,
-              "oauth_version=1.0",
-              "woeid=" + cityId,
-              "u=c",
-              "format=json")
+                  "oauth_nonce=" + oauthNonce,
+                  "oauth_signature_method=HMAC-SHA1",
+                  "oauth_timestamp=" + timestamp,
+                  "oauth_version=1.0",
+                  "woeid=" + cityId,
+                  "u=c",
+                  "format=json")
               .sorted()
               .collect(Collectors.joining("&"));
       final String toSign = "GET&" +
-          URLEncoder.encode(API_URL, "UTF-8") + "&" +
-          URLEncoder.encode(parameters, "UTF-8");
+                            URLEncoder.encode(API_URL, Charsets.UTF_8) + "&" +
+                            URLEncoder.encode(parameters, Charsets.UTF_8);
       SecretKeySpec signingKey = new SecretKeySpec((consumerSecret + "&").getBytes(), "HmacSHA1");
       Mac mac = Mac.getInstance("HmacSHA1");
       mac.init(signingKey);
       byte[] rawHMAC = mac.doFinal(toSign.getBytes());
       Base64.Encoder encoder = Base64.getEncoder();
       return encoder.encodeToString(rawHMAC);
-    } catch (UnsupportedEncodingException | NoSuchAlgorithmException | InvalidKeyException e) {
+    } catch (NoSuchAlgorithmException | InvalidKeyException e) {
       SilverLogger.getLogger(this).error(e);
       throw new WebApplicationException(Response.Status.INTERNAL_SERVER_ERROR);
     }
   }
 }
-  
+
